# plotcraft

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: DESIGN_RULES.md  diagram-planning-advisor-spec.md  plan-drawio-backend.md  plan-improved-svg-renderer.md  planning-prompt.md
examples/: README.md  d2_pipeline.d2  demo_excalidraw_architecture.py  demo_excalidraw_dark.py  demo_excalidraw_decision.py  demo_excalidraw_essay.py  demo_excalidraw_pipeline.py  demo_gepa_final.py  demo_pipeline.py  demo_react_loop.py  demo_scene_cycle.py  demo_scene_d2_all.py  demo_scene_d2_complex.py  demo_scene_d2_pipeline.py  demo_scene_dark.py  demo_scene_decision.py  demo_scene_fanout.py  demo_scene_pipeline.py  gallery.py  generative_slime_mold_v5.py  gepa_contrastive_tree.py  gepa_diagrams.py  gepa_evolution_tree.py  gepa_slime_mold_tree.py  gepa_synaptic_pruning_tree.py  gepa_tournament_tree.py  render_readme_gallery.py  render_scene_showcase.py  showcase.py  spatial_demo.py  test_all_templates.py  test_canvas_api.py
ref/figma-design/app/: App.tsx
ref/figma-design/imports/pasted_text/: plotcraft-design-system.md  plotcraft-dynamic-behavior.md
ref/figma-design/styles/: fonts.css  theme.css
skills/plotcraft-diagram/: LLM-SKILL.md  README.md  SKILL.md  SLM-SKILL.md
skills/plotcraft-diagram/references/: patterns.md
src/plotcraft/: __init__.py  advisor.py  connectors.py  diagram.py  drawio_renderer.py  excalidraw_renderer.py  grid.py  routing.py  scene.py  shapes.py  spatial.py  structures.py  svg.py  templates.py  text.py  types.py  wobble.py
src/plotcraft/render/: __init__.py  __main__.py
tests/: test_connectors.py  test_diagram.py  test_excalidraw.py  test_grid.py  test_integration.py  test_palette.py  test_scene.py  test_shapes.py  test_spatial.py  test_structures.py  test_svg.py  test_templates.py  test_text.py  test_wobble.py
tests/visual/: harness.py  scenarios.py
