[project]
name = "plotcraft"
version = "1.4.0"
description = "AI-friendly diagram engine — Scene API with D2 rendering and spatial compositions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
render = ["playwright>=1.40.0"]
svg = ["cairosvg>=2.9.0"]

[project.scripts]
plotcraft-render = "plotcraft.render:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plotcraft"]
include = ["src/plotcraft/render/render_template.html"]

[tool.hatch.build.targets.wheel.force-include]
"src/plotcraft/render/render_template.html" = "plotcraft/render/render_template.html"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["visual: visual regression tests (require playwright)"]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=9.0",
]
