[project]
name = "plotcraft"
version = "1.7.0"
description = "AI-friendly diagram engine — templates, Scene API, and spatial compositions with hand-drawn rendering"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ashwin Chidambaram" }]
keywords = ["diagrams", "ai", "llm", "d2", "excalidraw", "flowchart", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    # Playwright is required for Canvas (spatial) rendering.
    # The Chromium binary itself is downloaded on first use.
    "playwright>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/ashwinchidambaram/plotcraft"
Repository = "https://github.com/ashwinchidambaram/plotcraft"
Issues = "https://github.com/ashwinchidambaram/plotcraft/issues"

[project.scripts]
plotcraft-render = "plotcraft.render:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plotcraft"]

# Bundle the Excalidraw render template inside the wheel so the package
# works after `pip install` with no extra setup.
[tool.hatch.build.targets.wheel.force-include]
"src/plotcraft/render/render_template.html" = "plotcraft/render/render_template.html"

[tool.hatch.build.targets.sdist]
include = [
    "src/plotcraft",
    "README.md",
    "docs/DESIGN_RULES.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["visual: visual regression tests (require playwright)"]

[dependency-groups]
dev = [
    "pytest>=9.0",
]
